--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -142,6 +142,9 @@
   <data name="script_add" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\script_add.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="script_base" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\script_base.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="script_compile" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\script_compile.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -153,6 +156,9 @@
   </data>
   <data name="script_save" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\script_save.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="script_stack" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\script_stack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="sys_flags" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\JSON\sys_flags.json;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;iso-8859-1</value>
