--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -128,7 +128,7 @@
     <value>..\Icons\error.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="file_names" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\json\file_names.json;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+    <value>..\JSON\file_names.json;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;iso-8859-1</value>
   </data>
   <data name="flags" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\JSON\flags.json;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;iso-8859-1</value>
