--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -124,6 +124,21 @@
   <data name="commands" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\json\commands.json;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;iso-8859-1</value>
   </data>
+  <data name="custom_commands" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\JSON\CustomReference\commands.json;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;iso-8859-1</value>
+  </data>
+  <data name="custom_file_names" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\JSON\CustomReference\file_names.json;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;iso-8859-1</value>
+  </data>
+  <data name="custom_flags" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\JSON\CustomReference\flags.json;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;iso-8859-1</value>
+  </data>
+  <data name="custom_sys_flags" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\JSON\CustomReference\sys_flags.json;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;iso-8859-1</value>
+  </data>
+  <data name="custom_work" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\JSON\CustomReference\work.json;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;iso-8859-1</value>
+  </data>
   <data name="error" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\error.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
